--- a/intro/index.html
+++ b/intro/index.html
@@ -20,8 +20,8 @@
         <img src="IMG_1910.jpeg" width="300" alt="amsterdam's canals">
         <h6>This is a <u>very small</u> Heading</h6>
 
-        <p>One of <b>many</b> paragraphs.</p>
-        <p>I do the <a href="https://www.nytimes.com/crosswords" target="_blank">New York Times games every day</a>.</p>
+        <p>One of <b>many</b> paragraphs</p>
+        <p>I do the <a href="https://www.nytimes.com/crosswords" target="_blank">New York Times games</a> every day</p>
 <hr>
 
 
